crates/cli/tests/snapshots/php__php_use_project_on_a_terminal.snap
---
source: crates/cli/tests/php.rs
expression: terminal.stdout
---
✓  acme.test · PHP 8.4
   Updated Project config: <tempdir>/acme/pv.yml
✓  Installed PHP and FrankenPHP track 8.4
   ·  8.4.8-pv1
